Test/git-issues/git-issue-551.dfy.expect
git-issue-551.dfy(27,15): Error: function calls are allowed only in specification contexts (consider declaring the function a 'function method')
1 resolution/type errors detected in git-issue-551.dfy
